--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,7 +6,10 @@ author_profile: true
 ---
 
 {% include base_path %}
-
+<p>I am fortunate to have worked at Taibah University, 
+  where I had the privilege of teaching wonderful students.
+  Teaching is not just a job; it is a passion that I find incredibly rewarding. One of the aspects I cherish most is connecting with my students and hearing about where life takes them after they leave the classroom.
+  I have carefully designed courses and developed teaching materials to guide students through their educational journey. I am sharing some of these resources below, which can be adapted for classroom use or serve as supplementary, fun, and useful materials for independent student use.</p>
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
