add header to teaching

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,8 +4,12 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-
+<div class="header-image">
+  <img src="https://marwahalaofi.github.io/images/bg.png" alt="header image">
+</div>
 {% include base_path %}
+
+
 <p>I am fortunate to have worked at Taibah University, 
   where I had the privilege of teaching wonderful students.
   Teaching is not just a job; it is a passion that I find incredibly rewarding. One of the aspects I cherish most is connecting with my students and hearing about where life takes them after they leave the classroom.
