--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -3,7 +3,7 @@ layout: archive
 title: "Teaching"
 permalink: /teaching/
 author_profile: true
-header_image: https://marwahalaofi.github.io/images/bg.png
+header_image: https://marwahalaofi.github.io/images/bg.jpeg
 ---
 
 {% include base_path %}
